# event-esp32s

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig-esp32s3  sdkconfig.old
components/event_lib/: CMakeLists.txt  event_lib.cpp
components/event_lib/include/: event_lib.h  event_lib.hpp
components/event_process/: CMakeLists.txt  compressor.cpp  event_process.cpp  event_process_ipca.cpp
components/event_process/include/: compressor.hpp  event_process.h  event_process.hpp  event_process_ipca.hpp
components/incremental_stats/: CMakeLists.txt  incremental_stats.cpp
components/incremental_stats/include/: incremental_stats.hpp
components/my_dtw/: CMakeLists.txt  my_count.cpp  my_dtw.cpp
components/my_dtw/include/: my_count.hpp  my_dtw.hpp
components/my_mann_kendall/: CMakeLists.txt  my_mann_kendall.cpp
components/my_mann_kendall/include/: my_mann_kendall.hpp
components/my_sd_interface/: CMakeLists.txt  my_sd_interface.cpp
components/my_sd_interface/include/: my_sd_interface.h  my_sd_interface.hpp
components/my_serial/: CMakeLists.txt  my_serial.cpp
components/my_serial/include/: my_serial.hpp
components/opencv/: CMakeLists.txt
components/psram_interface/: CMakeLists.txt  psram_interface.cpp
components/psram_interface/include/: psram_interface.hpp
main/: CMakeLists.txt  main.cpp  sd_card_example_main.cpp
